@@ -17,10 +17,7 @@ import kodkod.engine.satlab.SATFactory;
 import java.util.regex.*;
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
-import java.io.FileNotFoundException;
 import java.io.IOException;
-import java.io.InputStream;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 
@@ -48,21 +45,14 @@ public class AlloyResult {
         	    + "}\n"
         	    + run;
         
-        System.out.println(userPredicate);
 
         try {
-        	// Load the Alloy model file from the classpath
-            String modelFilePath = type.equals("forward") ? "models/michigan.als" : "models/michigan2.als";
-            InputStream inputStream = getClass().getClassLoader().getResourceAsStream(modelFilePath);
-
-            // If the file is not found, throw an exception
-            if (inputStream == null) {
-                throw new FileNotFoundException("File " + modelFilePath + " not found in classpath");
-            }
-
-            // Read file content
-            modelContent = new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
-            
+            // Read the existing model from file
+        	if(type.equals("forward")) {
+                modelContent = new String(Files.readAllBytes(Paths.get(modelPath)));
+        	}else {
+                modelContent = new String(Files.readAllBytes(Paths.get(modelPath2)));
+        	}
             // Append the user-defined predicate at the end of the model
             modelContent += userPredicate;
 
@@ -72,6 +62,7 @@ public class AlloyResult {
             // Options for the Alloy solver
             A4Options options = new A4Options();
             options.solver = SATFactory.get("minisat");
+
 
             // Execute the model
             A4Solution solution = TranslateAlloyToKodkod.execute_command(null, world.getAllReachableSigs(), world.getAllCommands().get(world.getAllCommands().size() - 1), options);
@@ -94,6 +85,7 @@ public class AlloyResult {
         JSONObject result = new JSONObject();
         result.put("success", success);
         result.put("data", data);
+        System.out.println(result);
         return result;
     }
 
